unifi/unifi.yaml
# Unifi controller
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/name: unifi
  name: unifi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: unifi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - unifi.platform.labs.ahinh.me
      secretName: unifi-cert-tls
  ingressClassName: nginx
  rules:
    - host: unifi.platform.labs.ahinh.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: unifi
  labels:
    app: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
      - name: unifi
        image: jacobalberty/unifi:v7.3.83
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
          - containerPort: 8443
          - containerPort: 3478
            protocol: UDP
          - containerPort: 1900
            protocol: UDP
          - containerPort: 10001
            protocol: UDP
          - containerPort: 5656
            protocol: UDP
          - containerPort: 5514
            protocol: UDP
        resources:
          requests:
            cpu: "128m"
            memory: "256Mi"
          limits:
            cpu: "1024m"
            memory: "1024Mi"
        volumeMounts:
           - mountPath: "/unifi"
             name: unifi-persistent
      volumes:
      - name: unifi-persistent
        persistentVolumeClaim:
           claimName: unifi
---
apiVersion: v1
kind: Service
metadata:
   name: unifi
   namespace: unifi
spec:
   selector:
      app: unifi
   type: LoadBalancer
   ports:
      - name: command
        protocol: TCP
        port: 8080
        targetPort: 8080
      - name: webinterface
        protocol: TCP
        port: 8443
        targetPort: 8443
      - name: port8880
        protocol: TCP
        port: 8880
        targetPort: 8880
      - name: stun
        protocol: UDP
        port: 3478
        targetPort: 3478
      - name: remotesyslog
        protocol: UDP
        port: 5514
        targetPort: 5514
      - name: apedubroadcast
        protocol: UDP
        port: 5656
        targetPort: 5656
      - name: devicediscovery
        protocol: UDP
        port: 10001
        targetPort: 10001
      - name: l2controllerdiscovery
        protocol: UDP
        port: 1900
        targetPort: 1900
