unifi/calico-web-ingress-network-policy.yaml
# Allows web traffic coming in through the Ingress controller to the web ports
# Also permits egress traffic for the pods

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: unifi
spec:
  selector: app.kubernetes.io/instance == 'unifi'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      metadata:
        annotations:
          from: ingress-nginx
          to: unifi
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'ingress-nginx'
      destination:
        ports:
          - 80
          - 8080
          - 443
          - 8443
  egress:
    - action: Allow
